--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ document.addEventListener('DOMContentLoaded', function(event) {
 
 console.log('IN!!!');
 
-var socket = new WebSocket("ws://localhost:8766");
+var socket = new WebSocket("ws://localhost:8080/ws");
 
 socket.onopen = function(e) {
     console.log("[open] Connection established");
